# ESP32S3

./: README.md
AP_config/: CMakeLists.txt  代码流程图详解.md
AP_config/WIFI/main/: CMakeLists.txt  main.c
AP_config/button/main/: CMakeLists.txt  XL9555.h
AP_config/main/: CMakeLists.txt  WIFI_manager.c  WS_Serve.c  main.c
AP_config/xl9555/: CMakeLists.txt
AP_config/xl9555/main/: CMakeLists.txt
Audio/: partitions.csv
Audio/main/: Audio.c  CMakeLists.txt  button.c  main.c
Audio/main/iot/: AP_WIFI.c  AP_WIFI.h  OneNet_MQTT.c  OneNet_OTA.c  OneNet_dm.h
GUI-Guider-Projects/smar_desk/: CMakeLists.txt  smar_desk.guiguider
OneNet/: CMakeLists.txt  partitions.csv  partitions_WebServer.csv
OneNet/main/: CMakeLists.txt  main.c
WIFI/: CMakeLists.txt
WIFI/main/: WIFI_manager.c  WIFI_manager.h
button/main/: CMakeLists.txt  main.c
sample_project/main/: main.c
smart_desk/: CMakeLists.txt  partitions.csv
smart_desk/components/: Audio.c  Audio.h  CMakeLists.txt  XL9555.c  button.c  button.h  idf_component.yml  led_ws2812.c  my_sntp.c  my_sntp.h
smart_desk/components/iot/: AP_WIFI.c  AP_WIFI.h  OneNet_MQTT.c  OneNet_MQTT.h  OneNet_OTA.c  OneNet_OTA.h  OneNet_dm.c  OneNet_dm.h  WIFI_manager.c  WIFI_manager.h  WS_Serve.c  WS_Serve.h  onenet_token.c
smart_desk/components/lvgl/: ft6336u_driver.c  ft6336u_driver.h  lv_port.c  lv_port.h
smart_desk/components/ui/custom/: custom.c  custom.h
smart_desk/html/: apcfg.html
smart_desk/main/: Audio.h  CMakeLists.txt  XL9555.c  button.h  idf_component.yml  led_ws2812.h  main.c
xl9555/main/: main.c
(+36 files in other folders)
